WIP results template

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -14,7 +14,7 @@
     <!--Import materialize.css-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css"  media="screen,projection"/>
-    <!--<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>-->
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -67,6 +67,7 @@
 	</script>
 	
 	<script src="//localhost/bupa-angular/app.js"></script>
-	<script src="//localhost/bupa-angular/searchService.js"></script>
+	<script src="//localhost/bupa-angular/services.js"></script>
+	<script src="//localhost/bupa-angular/directives.js"></script>
 	</body>
 </html>
