--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -54,10 +54,12 @@
 		 
 	    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
 	    -->
-	    <script src="//code.jquery.com/jquery-1.9.0.js"></script>
-	    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.js"></script>
-	    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+	    <script src="//localhost/bupa-angular/lib/js/jquery-1.9.0.js"></script>
+	    <script src="//localhost/bupa-angular/lib/js/angular.min.js"></script>
+		<script src="//localhost/bupa-angular/lib/js/angular-route.js"></script>
+	    <script src="//localhost/bupa-angular/lib/js/materialize.min.js"></script>
+	    <script src="//localhost/bupa-angular/lib/js/angular-materialize.js"></script>
+	   
 	<!--app scripts-->
 	<script>
 		var bupaconst = {
