--- a/bupa-angular/mainTemplate.html
+++ b/bupa-angular/mainTemplate.html
@@ -3,7 +3,7 @@
 				  <div class="row">
 				    <div class="col s10 m10 l11">
 			          <div class="input-field">
-			            <input id="input_text large" type="text"/>
+			            <input id="input_text large" type="text" ng-model="searchbox"/>
 			            <!--  <a class="waves-effect waves-teal btn-flat"><i class="material-icons">search</i></a> -->
 			            <label for="input_text">Search keywords</label>
 			          </div>
@@ -21,8 +21,11 @@
 			      </div>
 
 			      <!-- if collection is ALL - show keymatches, cards and related searches-->
-			      [{{currentCollection}}]
-			      <div ng-if="currentCollection == 'all'">
+			      <div>
+			      	[{{params.site}}]
+			      	[{{params.q}}]
+			      </div>
+			      <div ng-if="currentView == 'cards'">
 			      		card view
 			      		<!--keymatches-->
 			      		<!--products and health information-->
@@ -35,9 +38,9 @@
 			      		<!--general and related searches-->
 			      </div>
 			      <!-- if collection is not ALL - show the fullscreen card-->
-			      <div ng-if="currentCollection != 'all'">
+			      <div ng-if="currentView == 'fullscreen'">
 			      	fullscreen
-			      		<div resultscard collection="{{currentCollection}}" title="{{cards[currentCollection].title}}"></div>
+			      		<div resultscard collection="{{params.site}}" title="{{cards[params.site].title}}"></div>
 			      </div>
 				<div style="height:40px;"></div>
 				  <div class="row" style="padding:0 10px 0 10px;">
