--- a/bupa-angular/resultsTemplate.html
+++ b/bupa-angular/resultsTemplate.html
@@ -34,11 +34,11 @@
 						        </div>
 					            	
 						              
-					            <div ng-if="currentView == 'cards'" class="">
+					            <div ng-if="mode == 'cards'" class="">
 					              <a href="/products5.html" style="color:orange;">View more ...</a>
 					            </div>
-
-					            <div ng-if="currentView == 'fullscreen'">
+								[{{mode}}]
+					            <div ng-if="mode == 'fullscreen'">
 						            <div class="black-text" style="font-size:30px;margin-bottom:20px;border-bottom:1px solid #efefef;"></div>
 						            <div class="grey-text">
 						            		Prev&nbsp;&nbsp;&nbsp;&nbsp;
