Card layout and tab hrefs. Searching capability.

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -53,7 +53,17 @@
 		<script>
 			var bupaconst = {
 				resourceuri:"//localhost/bupa-angular/",
-				gsauri:"//localhost"
+				gsauri:"//localhost",
+				coll_products_name:"bupa_products",
+				coll_products_label:"Products",
+				coll_health_name:"bupa_health_info",
+				coll_health_label:"Health Information",
+				coll_maps_name:"bupa_maps",
+				coll_maps_label:"Maps",
+				coll_claims_name:"bupa_claims",
+				coll_claims_label:"Claims",
+				coll_general_name:"bupa_general",
+				coll_general_label:"General"
 			}
 		</script>
 		
