HTML5mode disabled and some polyfill functions added to support ie8

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -4,7 +4,7 @@
 		<meta name="robots" content="NOINDEX,NOFOLLOW"/>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<title>
-			Search Results: <xsl:value-of select="$space_normalized_query"/>
+			Search Results
 		</title>
 		
 	    <!--Import materialize.css-->
