One 'no results' page only gets shown if there are no results on any card

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -70,5 +70,6 @@
 		<script src="//localhost/bupa-angular/app.js"></script>
 		<script src="//localhost/bupa-angular/services.js"></script>
 		<script src="//localhost/bupa-angular/directives.js"></script>
+		<script src="//localhost/bupa-angular/filters.js"></script>
 	</body>
 </html>
