--- a/bupa-angular/mainTemplate.html
+++ b/bupa-angular/mainTemplate.html
@@ -4,7 +4,7 @@
 					  <div class="row">
 					    <div class="col s10 m10 l11">
 				          <div class="input-field">
-				            <input id="input_text large" type="text" ng-model="searchbox"/>
+				            <input id="input_text large" type="text" ng-model="searchbox" gsa-autocomplete/>
 				            <!--  <a class="waves-effect waves-teal btn-flat"><i class="material-icons">search</i></a> -->
 				            <label for="input_text">Search keywords</label>
 				          </div>
@@ -38,6 +38,16 @@
 		          		</div>	
 		          	</div>
 			      </div>
+			    <!--keymatches-->
+			    <div ng-repeat="GM in buckets[coll_products_name].GSP.GM">
+			    	<div>
+			    		<a href="{{GM.GL}}" ng-bind="GM.GD"></a>
+			    	</div>
+			    	<div ng-bind="GM.GD"></div>
+			    	<br/>
+			    </div>
+
+			    <div ng-if="params.q">
 			      	<!--no results-->
 				      <div ng-if="allLoaded()">
 						<div ng-if="!hasResults()">
@@ -59,16 +69,6 @@
 				      <div>
 			      <!-- if collection is ALL - show keymatches, cards and related searches-->
 				      <div ng-if="currentView == 'cards'">
-				      		<!--keymatches-->
-				      		<div style="height:40px;"></div>
-							  <div class="row" style="padding:0 10px 0 10px;">
-							    <div class="col s10 m10 l12">
-					              <div style="margin-bottom:0px;padding-bottom:0px;border-bottom:0px solid #efefef;">
-					              	<div><a href="#">Our Products | Bupa Travel Insurance</a></div>
-					              	<div>This product is available for UK residents (excluding the Channel Islands) only. ... Our products. Travel insurance quote.</div>
-					              </div>
-								</div>
-						      </div>
 				      		<!--products and health information-->
 				      		<div class="row" style="margin-bottom:0px;">
 								<div resultscard collection="{{coll_products_name}}" config="cards[coll_products_name]" mode="{{currentView}}" params="params" num-results="4"></div>
@@ -86,19 +86,10 @@
 						      	
 								<div class="col s12 m12 l6" style="padding-top:20px;">
 						          <div class="" style="padding:10px;">
-						            <div class="black-text" style="font-size:30px;margin-bottom:20px;border-bottom:1px solid #ddd;">Related Searches</div>					            
-									<ul>
-									<li><a href="#">operation carried</a></li>
-									<li><a href="#">asleep operation</a></li>
-									<li><a href="#">achemotherapy surgical operations covered</a></li>
-									<li><a href="#">major operation</a></li>
-									<li><a href="#">operation remove</a></li>
-									<li><a href="#">hernia repair</a></li>
-									<li><a href="#">chemotherapy surgical operation need</a></li>
-									<li><a href="#">hiatus hernia</a></li>
-									<li><a href="#">need operation</a></li>
-									<li><a href="#">operation repair</a></li>
-									</ul>
+						            <div class="black-text" style="font-size:30px;margin-bottom:20px;border-bottom:1px solid #ddd;">Related Searches</div>	
+						            <div ng-repeat="cluster in clusters.clusters[0].clusters" class="cluster-result" > 
+						            	<a href="#" ng-bind="cluster.label" ng-click="search(cluster.label)"></a>
+      								</div>
 						     	</div>					     	
 						     	
 						       </div>
@@ -110,7 +101,7 @@
 				      		<div resultscard collection="{{params.site}}" config="cards[params.site]" mode="{{currentView}}" params="params" num-results="10"></div>
 				      </div>
 			   	</div>
-		
+			</div>	
 	    </div>
  
   	<div style="background: #0079c8;height:300px;margin-top:40px;">
