--- a/bupa-angular/resultsTemplate.html
+++ b/bupa-angular/resultsTemplate.html
@@ -40,7 +40,7 @@
 
 	              	<ul ng-if="R.MT.gsa_ctalink">
 		              	<li>
-		              		<i class="fa fa-file-text fa-lg black-text" ></i><a href="{{R.MT.gsa_ctalink_url}}" ng-bind="' ' + R.MT.gsa_ctalink"></a>
+		              		<i class="fa fa-file-text fa-lg black-text" ></i><a href="{{R.MT.gsa_ctalink_url}}" ng-bind="' ' + R.MT.gsa_ctalink" target="_blank"></a>
 		              		<span style="color:#bbb">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
 		              		<i class="fa fa-phone fa-lg black-text" ></i> <a href="tel:{{R.MT.gsa_cta_phone}}" ng-bind="' ' + R.MT.gsa_cta_phone"></a>
 		              	</li>
