--- a/bupa-angular/mainTemplate.html
+++ b/bupa-angular/mainTemplate.html
@@ -1,3 +1,4 @@
+<div ng-include="bupaconst.resourceuri + 'headerTemplate.html'"></div>
 <div style="height:70px;"></div>
 	  	<div class="container">  
 	  			<form ng-submit="search()">
@@ -111,6 +112,5 @@
 			   	</div>
 			</div>	
 	    </div>
- 
-  	<div style="background: #0079c8;height:300px;margin-top:40px;">
- 	</div>
+
+<div ng-include="bupaconst.resourceuri + 'footerTemplate.html'"></div>
