added bupa icons to metadata

--- a/bupa-angular/mainTemplate.html
+++ b/bupa-angular/mainTemplate.html
@@ -1,5 +1,5 @@
 
-<div class="container">  
+<div>  
     <!--keymatches-->
     <div ng-repeat="GM in buckets[coll_products_name].GSP.GM">
     	<div>
