--- a/bupa-angular/resultsTemplate.html
+++ b/bupa-angular/resultsTemplate.html
@@ -11,11 +11,9 @@
             </div>
             <div ng-if="R.MT.gsa_geo_res_address" ng-bind="R.MT.gsa_geo_res_address"></div>
             <div ng-if="!R.MT.gsa_geo_res_address" ng-bind-html="R.S | snippet | html"></div>
-            <ul ng-if="R.MT.gsa_cta_phone">
-                <li>
-                    <i class="fa fa-phone fa-lg black-text" ></i> <a href="tel:{{R.MT.gsa_cta_phone}}" ng-bind="' ' + R.MT.gsa_cta_phone"></a>
-                </li>
-            </ul>
+            <div ng-if="R.MT.gsa_cta_phone" class="cta-list">
+                <i class="phone"/> <a href="tel:{{R.MT.gsa_cta_phone}}" ng-bind="' ' + R.MT.gsa_cta_phone"></a>
+            </div>
         </div>
         <div ng-if="!(collection == bupaconst.coll_maps_name)" >
           	<div>
