wip maps integration local dev

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -113,9 +113,13 @@
 </div>
 		
 		<!-- Angular Material Dependencies -->
+		<script src='//localhost/bupa-angular/lib/js/lodash.min.js'></script>
 	    <script src="//localhost/bupa-angular/lib/js/jquery-1.9.0.js"></script>
 	    <script src="//localhost/bupa-angular/lib/js/angular.min.js"></script>
 		<script src="//localhost/bupa-angular/lib/js/angular-route.js"></script>
+
+		<script src='//localhost/bupa-angular/lib/js/angular-simple-logger.min.js'></script>
+		<script src='//localhost/bupa-angular/lib/js/angular-google-maps.min.js'></script>
 	    <!--<script src="//localhost/bupa-angular/lib/js/materialize.min.js"></script>
 	    <script src="//localhost/bupa-angular/lib/js/angular-materialize.js"></script>-->
 	   
@@ -124,6 +128,8 @@
 			var bupaconst = {
 				resourceuri:"//localhost/bupa-angular/",
 				gsauri:"//localhost",
+				coll_all_name:"bupa_all",
+				coll_all_label:"All",
 				coll_products_name:"bupa_products",
 				coll_products_label:"Products",
 				coll_health_name:"bupa_health_info",
