--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -139,7 +139,8 @@
 				coll_claims_name:"bupa_claims",
 				coll_claims_label:"Claims",
 				coll_general_name:"bupa_general",
-				coll_general_label:"General"
+				coll_general_label:"General",
+				google_maps_key: ""
 			}
 		</script>
 		
