Added paging style. Fixed bug in fullscreen column width

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -55,7 +55,7 @@
 		<div ng-include="bupaconst.resourceuri + 'headerTemplate.html'"></div>
 
 <!---------- hardcoded SEARCH BOX for visuals only -------------->
-<div id="holder">
+<div id="holder" class="bupa-font">
    <form id="suggestion_form" name="gs" method="GET" action="search" onsubmit="return ($('#gsa_search').val() == '') ? false
       : true;">
       <div class="searchBox container">
