Added some margin to keymatches. Fixed bug where URL wasnt showing.

--- a/bupa-angular/mainTemplate.html
+++ b/bupa-angular/mainTemplate.html
@@ -1,10 +1,10 @@
 <div>  
     <!--keymatches-->
-    <div ng-repeat="GM in buckets[coll_products_name].GSP.GM">
+    <div ng-repeat="GM in buckets[coll_products_name].GSP.GM" class="keymatches">
     	<div>
     		<a href="{{GM.GL}}" ng-bind="GM.GD"></a>
     	</div>
-    	<div ng-bind="GM.GD"></div>
+    	<div ng-bind="GM.GL"></div>
     	<br/>
     </div>
 
