--- a/bupa-angular/resultsTemplate.html
+++ b/bupa-angular/resultsTemplate.html
@@ -27,7 +27,7 @@
           	<div>
           		<a class="title" href="{{R.U}}" ng-bind-html="R.T | resultTitle | html" target="_blank"></a>
           	</div>
-            <iframe ng-if="($first && collection == bupaconst.coll_health_name) && R.MT.gsa_video_url" width="100%" height="150" src="{{R.MT.gsa_video_url | trustSrc}}" frameborder="0" allowfullscreen></iframe>
+            <iframe ng-if="($first && collection == bupaconst.coll_health_name) && R.MT.gsa_video_url" width="100%" height="150" src="{{R.MT.gsa_video_url | youtubeEmbed | trustSrc}}" frameborder="0" allowfullscreen></iframe>
           	<div ng-bind-html="R.S | snippet | html"></div>
           	<div ng-if="mode == 'fullscreen' || ($first && collection == bupaconst.coll_products_name)">
               	<ul ng-if="R.MT.gsa_benefit_1" class="benefits-list">
