--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -13,8 +13,8 @@
 	    <link rel="stylesheet" type="text/css" href="//localhost/bupa-angular/lib/css/font-awesome.min.css"/>-->
 	
 	    <!--Let browser know website is optimized for mobile-->
-	    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	    
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	    <!--
       <style>
 		    body {
 		    font-family: Arial;
