--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -48,7 +48,7 @@
 		<link rel='stylesheet' href='http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/css/base.css'/>
 
 
-		<!--<link rel="stylesheet" type="text/css" href="{$ref_url}Bupa/css/prettyPhoto.css" />-->
+		<link rel="stylesheet" type="text/css" href="http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/css/prettyPhoto.css" />
 
 	</head>
 	<body ng-app="bupasearch">
