--- a/bupa-angular/resultsTemplate.html
+++ b/bupa-angular/resultsTemplate.html
@@ -2,7 +2,16 @@
 	<div class="card-header" ng-bind="config.label"></div>
     <!--map-->
     <!--<iframe ng-if="collection == bupaconst.coll_maps_name" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d79588.60084359295!2d-0.20354667905273738!3d51.43715339545225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospital!5e0!3m2!1sen!2suk!4v1439987703475" width="100%" height="150" frameborder="0" style="border:0" allowfullscreen=""></iframe>-->
-    <div ng-if="buckets[collection].markers.length > 0" class="map" ui-gmap-google-map center="map.center" zoom="map.zoom" pan="map.pan">
+    <div ng-if="buckets[collection].markers.length > 0" 
+    ng-class="{'hide-on-large-only' : (mode == 'fullscreen')}"
+    class="map-banner" ui-gmap-google-map center="map.center" zoom="map.zoom" pan="map.pan">
+      <div ui-gmap-markers models="buckets[collection].markers" coords="'location'" fit="true" idkey="'url'">
+        <ui-gmap-windows show="show">
+            <div ng-non-bindable>{{title}}</div>
+        </ui-gmap-windows>
+      </div>
+    </div>
+    <div ng-if="buckets[collection].markers.length > 0 && mode == 'fullscreen'" class="map-tall hide-on-med-and-down" ui-gmap-google-map center="map2.center" zoom="map2.zoom" pan="map2.pan">
       <div ui-gmap-markers models="buckets[collection].markers" coords="'location'" fit="true" idkey="'url'">
         <ui-gmap-windows show="show">
             <div ng-non-bindable>{{title}}</div>
