tweaked styling on right aligned images

--- a/bupa-angular/resultsTemplate.html
+++ b/bupa-angular/resultsTemplate.html
@@ -32,7 +32,7 @@
                 <i class="phone"/> <a href="tel:{{R.MT.gsa_cta_phone}}" ng-bind="' ' + R.MT.gsa_cta_phone"></a>
             </div>
         </div>
-        <div ng-if="!(collection == bupaconst.coll_maps_name)" >
+        <div ng-if="!(collection == bupaconst.coll_maps_name)" class="l-table" >
         		
        		<div class="snippet-col">
        			<div>
