--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -11,6 +11,7 @@
 	    <!--<link href="//localhost/bupa-angular/lib/css/icon.css" rel="stylesheet">
 	    <link type="text/css" rel="stylesheet" href="//localhost/bupa-angular/lib/css/materialize.min.css"  media="screen,projection"/>
 	    <link rel="stylesheet" type="text/css" href="//localhost/bupa-angular/lib/css/font-awesome.min.css"/>-->
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
 	
 	    <!--Let browser know website is optimized for mobile-->
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
