added ie9 redirect to localhost test page

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -39,6 +39,12 @@
 		  max-width: 1280px;
 		  width: 90%; }
 		</style>-->
+		
+		<!--[if lte IE 9]>
+<script type="text/javascript">
+    window.location = "http://www.ie9version.com";
+</script>
+<![endif]-->
 
     <!-- app styles -->
     <link rel='stylesheet' href='//localhost/bupa-angular/bupa_material.css'/>
