Added fix for long card names in collection holder

--- a/bupa-angular/index.html
+++ b/bupa-angular/index.html
@@ -58,7 +58,7 @@
 		<link rel="stylesheet" type="text/css" href="http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/css/prettyPhoto.css" />
 
 	</head>
-	<body ng-app="bupasearch">
+	<body ng-app="bupasearch" class="bupa-material">
 		<div ng-include="bupaconst.resourceuri + 'headerTemplate.html'"></div>
 
 <!---------- hardcoded SEARCH BOX for visuals only -------------->
